<resources>
    <string name="app_name">SpotZone</string>
    <string name="content_name">Konten Spot Zone</string>
    <string name="description">Deskripsi</string>
    <string name="detail_name">detail name</string>
    <string name="detail_description">Detail description</string>
    <string name="about_me">about me</string>
    <string name="my_name">Andi Salam Syahputra</string>
    <string name="creator">Dibuat oleh</string>
    <string name="email">EMAIL : andiku0755@gmail.com</string>
    <string name="name_tag">NAMA : ANDI SALAM SYAHPUTRA</string>
    <string-array name="data_name">
        <item>Tembok Besar Tiongkok</item>
        <item>Sungai Amazon </item>
        <item>Ular King Kobra</item>
        <item>Seorang Wanita Berenang Sepanjang 42 Km</item>
        <item>Fahombo</item>
        <item>Kisah China: Dulu Kumuh Kini Jadi Raksasa Ekonomi Baru</item>
        <item>Manusia Laba-laba Perancis</item>
        <item>Palung Mariana, Tempat Terdalam di Bumi</item>
        <item>Pulau Socotra di Yaman, Konon Disebut Markas Dajjal</item>
        <item>Burung gagak dianggap hewan tercerdas</item>
        <item>Death Valley - California, tempat terpanas di dunia</item>
    </string-array>
</resources>